force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/KimbleOne__PerformanceAnalysisTrend__c.object-meta.xml
<CustomObject>
    <label>Performance Analysis Trend</label>
    <nameField>
        <label>Performance Analysis Trend Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performance Analysis Trends</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>