force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/fields/KimbleOne__ContributionFactor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContributionFactor__c</fullName>
    <label>Contribution Factor</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>