force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/fields/KimbleOne__P1ForecastAmountThis__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__P1ForecastAmountThis__c</fullName>
    <label>P1 Forecast This</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>