force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/fields/KimbleOne__P1ForecastLast__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__P1ForecastLast__c</fullName>
    <label>P1 Forecast Last</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>