force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/fields/KimbleOne__P1ForecastTrend__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__P1ForecastTrend__c</fullName>
    <formula>KimbleOne__P1ForecastThis__c - KimbleOne__P1ForecastLast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P1 Forecast Trend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>