force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/fields/KimbleOne__P2ForecastAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__P2ForecastAmount__c</fullName>
    <label>P2 Forecast Trend Amount</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>