force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/fields/KimbleOne__P2ForecastAmountThis__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__P2ForecastAmountThis__c</fullName>
    <label>P2 Forecast This</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>