force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/fields/KimbleOne__P2ForecastThis__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__P2ForecastThis__c</fullName>
    <label>P2 Forecast This</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>