force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/fields/KimbleOne__P2ForecastTrend__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__P2ForecastTrend__c</fullName>
    <formula>KimbleOne__P2ForecastThis__c - KimbleOne__P2ForecastLast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P2 Forecast Trend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>