force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/fields/KimbleOne__P2ForecastTrendAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__P2ForecastTrendAmount__c</fullName>
    <formula>KimbleOne__P2ForecastAmountThis__c - KimbleOne__P2ForecastAmountLast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P2 Forecast Trend Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>