force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/fields/KimbleOne__P3ForecastAmountLast__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__P3ForecastAmountLast__c</fullName>
    <label>P3 Forecast Last</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>