force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/fields/KimbleOne__P3ForecastImpact__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__P3ForecastImpact__c</fullName>
    <label>P3 Forecast Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>