force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/fields/KimbleOne__P3ForecastImpactPercentage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__P3ForecastImpactPercentage__c</fullName>
    <label>P3 Forecast Impact Pct</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>