force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/fields/KimbleOne__P3ForecastNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__P3ForecastNarrative__c</fullName>
    <label>P3 Forecast Narrative</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>