force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/fields/KimbleOne__P3ForecastTrend__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__P3ForecastTrend__c</fullName>
    <formula>KimbleOne__P3ForecastThis__c - KimbleOne__P3ForecastLast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P3 Forecast Trend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>