force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/fields/KimbleOne__P3ForecastTrendAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__P3ForecastTrendAmount__c</fullName>
    <formula>KimbleOne__P3ForecastAmountThis__c - KimbleOne__P3ForecastAmountLast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P3 Forecast Trend Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>