force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/fields/KimbleOne__ResourceType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourceType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Type</label>
    <referenceTo>KimbleOne__ResourceType__c</referenceTo>
    <relationshipLabel>Performance Analysis Trends</relationshipLabel>
    <relationshipName>PerformanceAnalysisTrends</relationshipName>
    <type>Lookup</type>
</CustomField>