force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/fields/KimbleOne__TimePeriod__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimePeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Period</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__TimePeriod__c.KimbleOne__Perspective__r.KimbleOne__Enum__c</field>
            <operation>equals</operation>
            <value>Reporting</value>
        </filterItems>
        <filterItems>
            <field>KimbleOne__TimePeriod__c.KimbleOne__PeriodType__r.KimbleOne__ForecastAtThisLevel__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__TimePeriod__c</referenceTo>
    <relationshipLabel>Performance Analysis Trends</relationshipLabel>
    <relationshipName>PerformanceAnalysisTrends</relationshipName>
    <type>Lookup</type>
</CustomField>