force-app/main/default/objects/KimbleOne__PerformanceAnalysisTrend__c/listViews/KimbleOne__All_Details.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All_Details</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__AnalysisFact__c</columns>
    <columns>KimbleOne__TimePeriod__c</columns>
    <columns>KimbleOne__P1ForecastLast__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
    <language>en_US</language>
</ListView>